--- a/index.html
+++ b/index.html
@@ -1,43 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VR Milsim - UHR</title>
-  <meta name="description" content="The United Hollow Republic [UHR] is a VR Milsim community hosting events and operations in virtual reality.">
-
-  <!-- Favicon -->
-  <link rel="icon" href="favicon.png">
-
-  <!-- External Stylesheet -->
-  <link rel="stylesheet" href="style.css">
-</head>
-
+<html>
 <body>
-
-  <header>
-    <h1>United Hollow Republic</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="join.html">Join</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-
-  <main>
-    <section>
-      <h2>Welcome to UHR</h2>
-      <p>
-        The United Hollow Republic is a VR Milsim community with daily events,
-        campaigns, combined arms objectives, and community-driven lore.
-      </p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2026 United Hollow Republic</p>
-  </footer>
-
+  <iframe src="pages/home.html" style="border:0;width:100%;height:100vh;"></iframe>
 </body>
 </html>
