--- a/index.html
+++ b/index.html
@@ -1,6 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>United Hollow Republic</title>
+  <meta name="description" content="United Hollow Republic - VR Milsim Community">
+
+  <link rel="icon" href="favicon.png">
+  <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
-  <iframe src="pages/home.html" style="border:0;width:100%;height:100vh;"></iframe>
+
+  <header>
+    <h1>United Hollow Republic</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="pages/about.html">About</a>
+      <a href="pages/join.html">Join</a>
+      <a href="pages/contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Welcome to UHR</h2>
+      <p>
+        The United Hollow Republic is a VR Milsim community hosting daily operations,
+        campaigns, combined arms objectives, and community-driven lore.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2026 United Hollow Republic</p>
+  </footer>
+
 </body>
 </html>
