--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ main {
 }
 
 .panel::before {
-  content: "INDEPENDENT COMMAND NODE";
+  content: "BIG CORPO MUST DIE!";
   position: absolute;
   top: -12px;
   left: 20px;
@@ -186,15 +186,13 @@ footer {
   <div class="panel">
     <h2>Operational Command</h2>
     <p>
-      Structured VR military simulation operations.
-      Persistent campaigns. Combined arms warfare.
-      Tactical immersion and coordinated strategy.
+      N/A
     </p>
 
     <div class="status-bar">
-      <div class="status">STATUS: STANDBY</div>
-      <div class="status">THEATER: ACTIVE</div>
-      <div class="status">OPS: WEEKLY</div>
+      <div class="status">N/A</div>
+      <div class="status">N/A</div>
+      <div class="status">N/A</div>
     </div>
 
     <a href="https://discord.gg/UHR" target="_blank" class="cta">JOIN DISCORD</a>
@@ -203,8 +201,7 @@ footer {
   <div class="panel">
     <h2>Active Theater</h2>
     <p>
-      Deployment zones currently classified.
-      Operational briefings available inside Discord.
+      KILL BIG CORPO! IM HOSTING MY OWN SHIT!
     </p>
   </div>
 
