--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ main {
 }
 
 .panel::before {
-  content: "BIG CORPO MUST DIE!";
+  content: "MILSIM IN VR!";
   position: absolute;
   top: -12px;
   left: 20px;
@@ -184,16 +184,16 @@ footer {
 <main>
 
   <div class="panel">
-    <h2>Operational Command</h2>
+    <h2>MILSIM IN VR</h2>
     <p>
-      N/A
+    Raising the Standard. 
     </p>
 
-    <div class="status-bar">
-      <div class="status">N/A</div>
-      <div class="status">N/A</div>
-      <div class="status">N/A</div>
-    </div>
+    /*<div class="status-bar">*/
+    /*  <div class="status">N/A</div>*/
+    /*  <div class="status">N/A</div>*/
+    /*  <div class="status">N/A</div>*/
+    /*</div>*/
 
     <a href="https://discord.gg/UHR" target="_blank" class="cta">JOIN DISCORD</a>
   </div>
