--- a/index.html
+++ b/index.html
@@ -193,9 +193,14 @@ footer {
   </div>
 
   <div class="panel">
-    <h2>Active Theater</h2>
+    <h2>SITE WORK IN PROGRESS</h2>
     <p>
       KILL BIG CORPO! IM HOSTING MY OWN SHIT!
+      GoDaddy wanted to charge me an additional 26$/month ontop of my already 38$/month
+      And for what? So they can keep asking me for my ID? So they can send me so many emails
+      they get auto marked for spam? Hell nawh.
+
+      Welcome to the future lads. Time to do things our way.
     </p>
   </div>
 
