--- a/pages/uhrtoday.html
+++ b/pages/uhrtoday.html
@@ -24,16 +24,23 @@ body {
   position: relative;
 }
 
-/* GRID */
+/* GRID BACKGROUND */
 body::before {
   content: "";
   position: fixed;
   inset: 0;
   background-image:
-    linear-gradient(rgba(40, 60, 120, 0.2) 1px, transparent 1px),
-    linear-gradient(90deg, rgba(40, 60, 120, 0.2) 1px, transparent 1px);
+    linear-gradient(rgba(40, 60, 120, 0.15) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(40, 60, 120, 0.15) 1px, transparent 1px);
   background-size: 40px 40px;
-  z-index: -2;
+  z-index: -3;
+  animation: bgShift 6s infinite linear;
+}
+
+@keyframes bgShift {
+  0% { transform: translate(0,0); }
+  50% { transform: translate(-10px,5px); }
+  100% { transform: translate(0,0); }
 }
 
 /* SCANLINES */
@@ -43,8 +50,8 @@ body::after {
   inset: 0;
   background: repeating-linear-gradient(
     to bottom,
-    rgba(0,0,0,0.3),
-    rgba(0,0,0,0.3) 1px,
+    rgba(0,0,0,0.35),
+    rgba(0,0,0,0.35) 1px,
     transparent 1px,
     transparent 3px
   );
@@ -52,15 +59,38 @@ body::after {
   z-index: 10;
 }
 
+/* RANDOM GLITCH FLASH */
+.glitch-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(255,0,0,0.05);
+  mix-blend-mode: screen;
+  opacity: 0;
+  pointer-events: none;
+  z-index: 5;
+}
+
 .container {
   text-align: center;
   border: 3px solid #7f1d1d;
   padding: 4rem 5rem;
   background: rgba(20, 0, 0, 0.85);
-  box-shadow: 0 0 20px #7f1d1d, inset 0 0 40px rgba(255,0,0,0.2);
+  box-shadow:
+    0 0 20px #7f1d1d,
+    inset 0 0 40px rgba(255,0,0,0.2);
+  position: relative;
 }
 
-/* TITLE */
+/* Chromatic glitch fringe */
+.container::before,
+.container::after {
+  content: attr(data-text);
+  position: absolute;
+  left: 0;
+  right: 0;
+  opacity: 0.05;
+}
+
 h1 {
   font-size: 1.5rem;
   letter-spacing: 4px;
@@ -68,7 +98,6 @@ h1 {
   color: #ff6b6b;
 }
 
-/* WARNING */
 .warning-text {
   font-size: 1.2rem;
   letter-spacing: 5px;
@@ -78,19 +107,18 @@ h1 {
     0 0 5px #ff0000,
     0 0 15px #ff0000,
     0 0 30px #660000;
-  animation: glitch 2s infinite;
+  animation: glitchText 2s infinite;
 }
 
-@keyframes glitch {
-  0% { opacity: 1; transform: translate(0); }
-  20% { opacity: 0.8; transform: translate(-1px, 1px); }
-  40% { opacity: 1; transform: translate(1px, -1px); }
-  60% { opacity: 0.85; transform: translate(-1px, 0); }
-  80% { opacity: 1; transform: translate(0, 1px); }
-  100% { opacity: 1; transform: translate(0); }
+@keyframes glitchText {
+  0% { transform: translate(0); }
+  20% { transform: translate(-1px, 1px); }
+  40% { transform: translate(1px, -1px); }
+  60% { transform: translate(-1px, 0); }
+  80% { transform: translate(0, 1px); }
+  100% { transform: translate(0); }
 }
 
-/* TIMER */
 #timer {
   font-size: 3rem;
   letter-spacing: 6px;
@@ -134,6 +162,8 @@ h1 {
 
 <body>
 
+<div class="glitch-overlay" id="glitch"></div>
+
 <div class="container">
   <h1></h1>
   <div class="warning-text">GET READY TO FIGHT</div>
@@ -142,39 +172,61 @@ h1 {
   <a href="../index.html" class="home-link">RETURN</a>
 </div>
 
+<!-- Ambient Hum -->
+<audio id="hum" src="audio/roomHum.wav" loop></audio>
+
 <script>
 const targetDate = new Date("March 30, 2026 00:00:00").getTime();
 const timer = document.getElementById("timer");
+const hum = document.getElementById("hum");
+const glitch = document.getElementById("glitch");
 
 let audioContext;
 let tickingEnabled = false;
 
-/* Enable sound after first click (browser autoplay policy) */
+/* Enable audio after first click */
 document.addEventListener("click", () => {
   if (!audioContext) {
     audioContext = new (window.AudioContext || window.webkitAudioContext)();
+    hum.volume = 0.4;
+    hum.play();
     tickingEnabled = true;
   }
 }, { once: true });
 
+/* INDUSTRIAL LOW METAL TICK */
 function playTick() {
   if (!tickingEnabled) return;
 
-  const oscillator = audioContext.createOscillator();
+  const osc = audioContext.createOscillator();
   const gain = audioContext.createGain();
+  const filter = audioContext.createBiquadFilter();
 
-  oscillator.type = "square";
-  oscillator.frequency.setValueAtTime(1000, audioContext.currentTime);
+  osc.type = "square";
+  osc.frequency.setValueAtTime(120, audioContext.currentTime);
 
-  gain.gain.setValueAtTime(0.05, audioContext.currentTime);
-  gain.gain.exponentialRampToValueAtTime(0.001, audioContext.currentTime + 0.05);
+  filter.type = "lowpass";
+  filter.frequency.setValueAtTime(300, audioContext.currentTime);
 
-  oscillator.connect(gain);
+  gain.gain.setValueAtTime(0.15, audioContext.currentTime);
+  gain.gain.exponentialRampToValueAtTime(0.001, audioContext.currentTime + 0.15);
+
+  osc.connect(filter);
+  filter.connect(gain);
   gain.connect(audioContext.destination);
 
-  oscillator.start();
-  oscillator.stop(audioContext.currentTime + 0.05);
+  osc.start();
+  osc.stop(audioContext.currentTime + 0.15);
 }
+
+/* Background glitch flicker */
+function randomGlitch() {
+  glitch.style.opacity = Math.random() * 0.2;
+  setTimeout(() => {
+    glitch.style.opacity = 0;
+  }, 80);
+}
+setInterval(randomGlitch, 3000 + Math.random() * 4000);
 
 function updateCountdown() {
   const now = new Date().getTime();
