--- a/404.html
+++ b/404.html
@@ -1,1 +1,208 @@
-Page not found.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>UNITED HOLLOW REPUBLIC</title>
+
+<style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Courier New", monospace;
+}
+
+body {
+  background-color: #0a0f0d;
+  color: #cfd8cf;
+  overflow-x: hidden;
+  position: relative;
+  min-height: 100vh;
+}
+
+/* ===== BACKGROUND VIDEO ===== */
+#bgVideo {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -3;
+  filter: brightness(0.35) contrast(1.2);
+}
+
+/* ===== TACTICAL GRID ===== */
+body::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background-image:
+    linear-gradient(rgba(40, 60, 120, 0.2) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(40, 60, 120, 0.2) 1px, transparent 1px);
+  background-size: 20px 20px;
+  z-index: -2;
+}
+
+/* ===== CRT SCANLINES ===== */
+body::after {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background: repeating-linear-gradient(
+    to bottom,
+    rgba(0,0,0,0.25),
+    rgba(0,0,0,0.25) 1px,
+    transparent 1px,
+    transparent 3px
+  );
+  pointer-events: none;
+  z-index: 10;
+}
+
+
+@keyframes panelReveal {
+  0% { opacity: 0; transform: translateY(50px); }
+  100% { opacity: 1; transform: translateY(0); }
+}
+
+/* ===== HEADER ===== */
+header {
+  padding: 2rem;
+  border-bottom: 3px solid #1e3a8a;
+  background: rgba(15,23,19,0.85);
+  position: relative;
+  z-index: 5;
+  animation: glitchBoot 1.2s ease-out;
+}
+
+h1 {
+  font-size: 2rem;
+  letter-spacing: 4px;
+  color: #4f7cff;
+  text-transform: uppercase;
+}
+
+h1:hover {
+  text-shadow: 2px 0 red, -2px 0 cyan;
+}
+
+nav {
+  margin-top: 1rem;
+}
+
+nav a {
+  color: #7fa6ff;
+  text-decoration: none;
+  margin-right: 2rem;
+  font-weight: bold;
+}
+
+nav a:hover {
+  color: #ffffff;
+  text-decoration: underline;
+}
+
+/* ===== MAIN ===== */
+main {
+  padding: 4rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* CENTER PANELS */
+  max-width: 100%;
+  position: relative;
+  z-index: 5;
+}
+
+/* ===== PANELS ===== */
+.panel {
+  width: 100%;
+  max-width: 800px;
+  border: 2px solid #1e40af;
+  padding: 2rem;
+  margin-bottom: 3rem;
+  background: rgba(10, 20, 40, 0.85);
+  position: relative;
+  animation: panelReveal 1s ease forwards;
+}
+
+.panel:nth-child(2) {
+  animation-delay: 0.3s;
+}
+
+.panel::before {
+  content: "MILSIM IN VR!";
+  position: absolute;
+  top: -12px;
+  left: 20px;
+  background: #0a0f0d;
+  padding: 0 10px;
+  font-size: 0.75rem;
+  color: #5f8fff;
+}
+
+.panel h2 {
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: #7fa6ff;
+}
+
+/* ===== CTA BUTTON ===== */
+.cta {
+  display: inline-block;
+  margin-top: 1.5rem;
+  padding: 0.8rem 1.5rem;
+  border: 2px solid #3b82f6;
+  background: #111c33;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+  transition: 0.2s;
+}
+
+.cta:hover {
+  background: #3b82f6;
+  color: #0a0f0d;
+}
+
+/* ===== FOOTER ===== */
+footer {
+  border-top: 3px solid #1e3a8a;
+  padding: 1.5rem 2rem;
+  font-size: 0.8rem;
+  color: #5f8fff;
+  position: relative;
+  z-index: 5;
+  text-align: center;
+}
+</style>
+</head>
+
+<body>
+
+<header>
+  <h1>UNITED HOLLOW REPUBLIC</h1>
+  <nav>
+    <a href="index.html">HOME</a>
+    <a href="pages/about.html">ABOUT</a>
+    <a href="https://discord.gg/UHR" target="_blank">DISCORD</a>
+    <a href="pages/lore.html">LORE</a>
+  </nav>
+</header>
+
+<main>
+  <div class="panel">
+    <h2>404</h2>
+    <p>That page doesn't exist or has been moved!</p>
+    <a href="index.html" target="_blank" class="cta">RETURN</a>
+  </div>
+</main>
+
+<footer>
+  © 2026 UNITED HOLLOW REPUBLIC | VR MILSIM
+</footer>
+
+</body>
+</html>
