--- a/404.html
+++ b/404.html
@@ -196,7 +196,7 @@ footer {
   <div class="panel">
     <h2>404</h2>
     <p>That page doesn't exist or has been moved!</p>
-    <a href="index.html" target="_blank" class="cta">RETURN</a>
+    <a href="https://unitedhollowrepublic.com" target="_blank" class="cta">RETURN</a>
   </div>
 </main>
 
